# ssh-buddy

./: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
scripts/: bump-version.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  connection.rs  keys.rs  known_hosts.rs  mod.rs  permissions.rs
src-tauri/src/models/: error.rs  key_info.rs  mod.rs
src-tauri/src/services/: agent_service.rs  key_manager.rs  known_hosts.rs  mod.rs  permission_service.rs  ssh_connection.rs
src-tauri/src/utils/: mod.rs  path_validator.rs  ssh_config.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/known_hosts/: hashed.txt  malformed.txt  standard.txt
src-tauri/tests/fixtures/ssh_config/: basic.config
src/__tests__/: setup.ts
src/__tests__/components/: PreflightPanel.test.tsx
src/__tests__/lib/: diagnostic-engine.test.ts  ssh-service.test.ts
src/__tests__/mocks/: tauri.ts
src/components/common/: ContextualTip.tsx  EmptyState.tsx  Skeleton.tsx  Toast.tsx
src/components/hosts/: HostDetail.tsx  HostList.tsx  PreflightPanel.tsx  TroubleshootingWizard.tsx
src/components/keys/: KeyDetail.tsx  KeyGenerator.tsx  KeyList.tsx  SecurityPanel.tsx
src/components/layout/: TitleBar.tsx
src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  (+1 more)
src/hooks/: useUpdater.ts
src/lib/: diagnostic-engine.ts  guidance-tips.ts  platform-utils.ts  ssh-service.ts
